overflow bug..

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -9,7 +9,6 @@
   height: 50%;
   width: 100%;
   align-items: center;
-  justify-content: center;
   display: flex;
   overflow: auto;
   flex-direction: column;
